# color-filters

./: README.md  build-on-aws.txt
bright/: Cargo.toml
bright/src/: main.rs
bright/src/bright/: channel.rs  channel_zero.rs  duotone.rs  mod.rs  standard.rs
examples/: LBP.jpg_avg.ppm  LBP.jpg_channel_b.ppm  LBP.jpg_channel_g.ppm  LBP.jpg_channel_r.ppm  LBP.jpg_decomp_max.ppm  LBP.jpg_decomp_min.ppm  LBP.jpg_desat.ppm  LBP.jpg_layers_10.ppm  LBP.jpg_layers_100.ppm  LBP.jpg_luma.ppm
gray-scale/: Cargo.toml
gray-scale/src/: main.rs
gray-scale/src/gray/: channel.rs  decomposition.rs  desaturation.rs  layers.rs  luma.rs  mod.rs  standard.rs
pixels/: Cargo.toml  main.js
pixels/src/: main.rs
pixels/src/filters/: filter_grid.rs  mod.rs
