[package]
name = "bright"
version = "0.1.0"
authors = ["Stephen Becker IV <github@deathbyescalator.com>"]

[dependencies]
image = "*"
simple_parallel = {git = 'https://github.com/sbeckeriv/simple_parallel.git',  branch ="master"}
openssl = "0.7.9"
rustc-serialize = "0.3.19"
[dependencies.rusoto]
features = ["s3"]
version = "*"
